Fix truncated input on medium screens

--- a/src/css/components/forms/_icon-input.scss
+++ b/src/css/components/forms/_icon-input.scss
@@ -29,10 +29,10 @@
         input, select, textarea{
             float:left;
             margin-top:0;
-            width:25%;
+            width:40%;
 
             &:last-child{
-                width:75%;
+                width:60%;
             }
         }
         
